// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDataSetCategories returns chart data categorised by filters 1`] = `
Array [
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2012_AY",
        },
        "value": 0.19,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2013_AY",
        },
        "value": 0.22,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2014_AY",
        },
        "value": 0.25,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2015_AY",
        },
        "value": 0.29,
      },
    },
    "filter": CategoryFilter {
      "category": "Characteristic",
      "group": "Gender",
      "isTotal": false,
      "label": "Gender female",
      "value": "gender-female",
    },
  },
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2012_AY",
        },
        "value": 1.54,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2013_AY",
        },
        "value": 1.78,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2014_AY",
        },
        "value": 1.92,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2015_AY",
        },
        "value": 2.09,
      },
    },
    "filter": CategoryFilter {
      "category": "Characteristic",
      "group": "Gender",
      "isTotal": false,
      "label": "Gender male",
      "value": "gender-male",
    },
  },
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2012_AY",
        },
        "value": 0.19,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2013_AY",
        },
        "value": 0.22,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2014_AY",
        },
        "value": 0.25,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2015_AY",
        },
        "value": 0.29,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2012_AY",
        },
        "value": 1.54,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2013_AY",
        },
        "value": 1.78,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2014_AY",
        },
        "value": 1.92,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2015_AY",
        },
        "value": 2.09,
      },
    },
    "filter": CategoryFilter {
      "category": "School type",
      "group": "Default",
      "isTotal": false,
      "label": "State-funded primary",
      "value": "state-funded-primary",
    },
  },
]
`;

exports[`createDataSetCategories returns chart data categorised by indicators 1`] = `
Array [
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2012_AY",
        },
        "value": 0.19,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2013_AY",
        },
        "value": 0.22,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2014_AY",
        },
        "value": 0.25,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2015_AY",
        },
        "value": 0.29,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2012_AY",
        },
        "value": 1.54,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2013_AY",
        },
        "value": 1.78,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2014_AY",
        },
        "value": 1.92,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"},\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2015_AY",
        },
        "value": 2.09,
      },
    },
    "filter": Indicator {
      "decimalPlaces": undefined,
      "group": undefined,
      "label": "Fixed period exclusion rate",
      "name": "exclusion_rate",
      "unit": "%",
      "value": "exclusion-rate",
    },
  },
]
`;

exports[`createDataSetCategories returns chart data categorised by locations 1`] = `
Array [
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2012_AY",
        },
        "value": 0.19,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2013_AY",
        },
        "value": 0.22,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2014_AY",
        },
        "value": 0.25,
      },
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2015_AY",
        },
        "value": 0.29,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2012_AY",
        },
        "value": 1.54,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2013_AY",
        },
        "value": 1.78,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2014_AY",
        },
        "value": 1.92,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2015_AY",
        },
        "value": 2.09,
      },
    },
    "filter": LocationFilter {
      "geoJson": Array [],
      "group": undefined,
      "label": "England",
      "level": "country",
      "value": "E92000001",
    },
  },
]
`;

exports[`createDataSetCategories returns chart data categorised by time periods 1`] = `
Array [
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"}}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2012_AY",
        },
        "value": 0.19,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"}}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2012_AY",
        },
        "value": 1.54,
      },
    },
    "filter": TimePeriodFilter {
      "code": "AY",
      "group": undefined,
      "label": "2012/13",
      "value": "2012_AY",
      "year": 2012,
    },
  },
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"}}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2013_AY",
        },
        "value": 0.22,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"}}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2013_AY",
        },
        "value": 1.78,
      },
    },
    "filter": TimePeriodFilter {
      "code": "AY",
      "group": undefined,
      "label": "2013/14",
      "value": "2013_AY",
      "year": 2013,
    },
  },
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"}}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2014_AY",
        },
        "value": 0.25,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"}}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2014_AY",
        },
        "value": 1.92,
      },
    },
    "filter": TimePeriodFilter {
      "code": "AY",
      "group": undefined,
      "label": "2014/15",
      "value": "2014_AY",
      "year": 2014,
    },
  },
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"gender-female\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"}}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 1",
          },
          "filters": Array [
            "gender-female",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2015_AY",
        },
        "value": 0.29,
      },
      "{\\"filters\\":[\\"gender-male\\",\\"state-funded-primary\\"],\\"indicator\\":\\"exclusion-rate\\",\\"location\\":{\\"level\\":\\"country\\",\\"value\\":\\"E92000001\\"}}": Object {
        "dataSet": Object {
          "config": Object {
            "label": "Test label 2",
          },
          "filters": Array [
            "gender-male",
            "state-funded-primary",
          ],
          "indicator": "exclusion-rate",
          "location": Object {
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": "2015_AY",
        },
        "value": 2.09,
      },
    },
    "filter": TimePeriodFilter {
      "code": "AY",
      "group": undefined,
      "label": "2015/16",
      "value": "2015_AY",
      "year": 2015,
    },
  },
]
`;
